--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,10 +2,8 @@ site_name: ELIXIR lesson
 nav:
     - About: index.md
     - Course Content:
-      - "1. title of first chapter": chapters/chapter_01.md
-      - "2. title of second chapter": chapters/chapter_02.md
-      - "Follow up training": follow_up_training.md
-      - "References": chapters/references.md
+      - "How to customize this repository": chapters/chapter_01.md
+      - "How to add content to this template": chapters/chapter_02.md
     
 
 theme:
