--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,7 @@
 site_name: Instructions how to use the ELIXIR-TrP-LessonTemplate-MkDocs
 nav:
     - About: index.md
-    - Seting up a new repository: chapters/chapter_01.md
+    - Setting up a new repository: chapters/chapter_01.md
     - Customize the repository: chapters/chapter_02.md
     - Adding content using GitHub editor: chapters/chapter_03.md
     
