--- a/.github/workflows/render_page.yml
+++ b/.github/workflows/render_page.yml
@@ -11,6 +11,5 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: 3.x
-      - run: pip install mkdocs-material 
-      - run: pip install mkdocs-bibtex
+      - run: pip install mkdocs-material mkdocs-bibtex neoteroi-mkdocs mkdocs-video
       - run: mkdocs gh-deploy --force
