--- a/.github/workflows/template-sync.yml
+++ b/.github/workflows/template-sync.yml
@@ -4,7 +4,7 @@ on:
   schedule:
   - cron:  "0 0 1 * *"
   workflow_dispatch:
-  push:
+
 jobs:
   repo-sync:
     runs-on: ubuntu-latest
@@ -18,4 +18,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           source_repo_path: elixir-europe-training/ELIXIR-TrP-LessonTemplate-MkDocs
-          upstream_branch: 6-add-automatic-sync-by-pr-to-original-template
+          upstream_branch: main
