--- a/.github/workflows/render_page.yml
+++ b/.github/workflows/render_page.yml
@@ -2,14 +2,20 @@ name: render page
 on:
   push:
     branches:
-      - main 
+      - main
+  workflow_dispatch:
+  schedule:
+    # every week on Sunday
+    - cron: "0 0 * * 0"
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
         with:
           python-version: 3.x
-      - run: pip install mkdocs-material mkdocs-bibtex neoteroi-mkdocs mkdocs-video
-      - run: mkdocs gh-deploy --force
+      - run: |
+          pip install -r requirements.txt
+          mkdocs gh-deploy --force
