--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,12 +1,10 @@
 site_name: ELIXIR lesson template instructions
 
 nav:
-    - About: index.md
-    - Instructions for Template Maintainers:
-        - Setting up a new repository: chapters/chapter_01.md
-    - Instructions for Template Users:
-        - Customize the repository: chapters/chapter_02.md
-        - Adding content using GitHub editor: chapters/chapter_03.md
+    - Home: index.md
+    - Setting up a new repository: chapters/chapter_01.md
+    - Customize the repository: chapters/chapter_02.md
+    - Adding content: chapters/chapter_03.md
     
 
 theme:
@@ -59,6 +57,7 @@ markdown_extensions:
         custom_icons:
           - overrides/.icons
   - neoteroi.cards
+  - addbioschemas
 
 extra_css:
   - stylesheets/extra.css
